alterei requisitos deixando funcional

--- a/sejavoluntario.html
+++ b/sejavoluntario.html
@@ -49,7 +49,7 @@
     <ul class="paragrafo-requisitos">
         <li>✅ Ter mais de 18 anos;</li>
         <li>✅ Participar de curso gratuito de mais de 30 horas de duração;</li>
-        <li>✅ Para se inscrever <strong>clique aqui</strong> preencha o formulário e receberá uma resposta em seu e-mail.
+        <li>✅ Para se inscrever <strong><a href="contato.html" class="nav-item">clique aqui</a></strong> preencha o formulário e receberá uma resposta em seu e-mail.
         </li>
     </ul>
       </div>
