mudando cores dos butoes do blog e add imagem ao header

--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,9 @@
       height="80"
     />
   </div>
+  <div>
+    <img class="container-image" src="./img/homem-mulheres4.png" alt="três pessoas de lado a lado">
+  </div>
   <h1 align="left">Blogs</h1>
   </header>
 
