altrerações no entre contatos conosco deixando funcional

--- a/sejavoluntario.html
+++ b/sejavoluntario.html
@@ -108,12 +108,15 @@
       </p>
     </div>
    
+    <a id="contato-whatsapp" href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL" target="_blank">
       <img class="imagem-whatsapp"
         src="./img/whatsapp-dark.png"
         alt="imagem que representa o simbolo do whatsapp"
         width="30"
-        height="30"
-      >  Entre em contato conosco
+        height="30">
+        <div class="contato-conosco">
+        Entre em contato conosco</div></a>
+  
   
       
       <img class="img-pessoas-ajuda"
