ajustei a imagem do blog e logo atribuindo novas disposiçoes

--- a/blog.html
+++ b/blog.html
@@ -16,21 +16,22 @@
         <a href="blog.html" class="nav-item">Blog</a>
         <a href="quemsomos.html" class="nav-item">Quem Somos</a>
         <a href="sejavoluntario.html" class="nav-item">Voluntário</a>
-        <a href="#contato" class="nav-item">Contato</a>
+        <a href="contato.html" class="nav-item">Contato</a>
       </ul>
     </nav>
       <div class=" logo">
     <img
       src="./img/logo-projeto-RS.png"
       alt="Logo do projeto refugio solidario"
-      width="80"
-      height="80"
+      
     />
   </div>
   <div>
     <img class="container-image" src="./img/homem-mulheres4.png" alt="três pessoas de lado a lado">
   </div>
-  <h1 align="left">Blogs</h1>
+   <div class="blog">
+  <h1>Blogs</h1>
+</div>
   </header>
 
   
