--- a/sejavoluntario.html
+++ b/sejavoluntario.html
@@ -29,7 +29,7 @@
       <div class="texto-voluntariado">
        <h1>VOLUNTARIADO</h1>
        <ul>
-           <ol>O voluntariado do refugio solidário doa o seu</ol>
+           <ol>O voluntariado do refúgio solidário doa o seu</ol>
            <ol> tempo - 4 horas semanais - para conversar</ol>
            <ol>com outra pessoa pelo o computador, celular,</ol>
            <ol>tablet ou notebook, de forma anônima, sigilosa,</ol>
