add pasta video, add video introdutorio

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </ul>
 
     </nav>
+
     <header class="container">
         <div>
             <img class="logo-projeto-RS" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
@@ -36,6 +37,13 @@
         </div>
         </div>
 </header>
+
+    <div class="video-container">
+        <video controls>
+            <source src="./video/Video-introdutorio.mp4" type="video/mp4"></video>
+    </div>
+   
+
 <main>
     
     <section class="resumo-container">
