add video Quem Somos!

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
         </div>
         </div>
+
 </header>
 
     <div class="video-container">
@@ -143,7 +144,8 @@
     </ul>
     </section>
 
-    <section> 
+    <section>
+        
         <div class="titulo-quemSomos-RefugioSolidario">
             <h1>QUEM SOMOS O REFÚGIO SOLIDÁRIO</h1>
             <h3>Refúgio Solidário</h3>
@@ -157,7 +159,10 @@
             <img class="tam-img-solidario01" src="./img/acolhemos.png" alt="homem abraçando mulher">
         </div>
 
-        
+        <div class="video-container">
+            <video controls>
+                <source src="./video/video-Quem-Somos.mp4" type="video/mp4"></video>
+        </div>   
    
     <div class="equipe">
         <h3>FAÇA PARTE DA NOSSA EQUIPE!</h3>
