inserido o botão voltar ao topo, e icone seta para cima

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Início</title>
 </head>
 <body>
-    <nav class="navgation">
+    <nav class="navgation" id="topo">
         <ul>
             <a class="links" href="index.html">Início</a>
             <a class="links" href="blog.html">Blog</a>
@@ -232,6 +232,11 @@
       </section>
       
 </main>
+
+    <div>
+     <a href="#topo"><img class="voltar" src="./img/seta-para-cima.png" alt="voltar ao topo"></a>
+    </div>
+
     <footer class="footer-index">
     <img id="logoProjetoFooter" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
     <ul>
