fiz as alteraçoes sugeridas pelo o professor

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -32,7 +32,7 @@
           <div class="perfil">
             <img src="./img/perfil-cris-projeto-RS .png">
             <p>
-              Alessandra Cristine
+              Alessandra Barbosa
             </p>
             
           <ul class="encontre-me">
