--- a/blog.html
+++ b/blog.html
@@ -9,21 +9,25 @@
     <title>Blog</title>
 </head>
 <body>
+  <nav class="navgation">
+  
+    <ul>
+        <a class="links" href="index.html">Início</a>
+        <a class="links" href="blog.html">Blog</a>
+        <a class="links" href="quemsomos.html">Quem Somos</a>
+        <a class="links" href="sejavoluntario.html">Voluntário</a>
+        <a class="links" href="contato.html">Contato</a>
+    </ul>
+
+</nav>  
   <header class = "header">
-    <nav>
-      <ul>
-        <a href="index.html" class="nav-item">Início</a>
-        <a href="blog.html" class="nav-item">Blog</a>
-        <a href="quemsomos.html" class="nav-item">Quem Somos</a>
-        <a href="sejavoluntario.html" class="nav-item">Voluntário</a>
-        <a href="contato.html" class="nav-item">Contato</a>
-      </ul>
-    </nav>
-      <div class=" logo">
+   
+      <div class="logo">
     <img
       src="./img/logo-projeto-RS.png"
       alt="Logo do projeto refugio solidario"
-      
+      width="80"
+        height="80"
     />
   </div>
   <div class="blog">
@@ -60,84 +64,31 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ac ipsum eget risus vulputate suscipit. Nulla dictum risus ut lobortis efficitur. Vivamus tempor fringilla tellus, ut lacinia nisi consectetur nec. Sed eget viverra ligula. Quisque ultricies, massa et dignissim malesuada, nibh justo venenatis tortor, mollis facilisis diam sem nec quam. Vivamus quis sollicitudin eros, et vehicula urna. Suspendisse fringilla blandit dictum. Vivamus et rhoncus augue, viverra tempus velit. Vivamus molestie faucibus sapien, a gravida sem convallis condimentum. Morbi at laoreet ex, id pulvinar tellus. Ut aliquet tellus a lobortis congue. Duis nec urna porta, finibus nibh id, suscipit erat.</p>
         </div> 
 </main>
-<section id="footer-rodape">
-  <footer class="rodape">
-    <div class= "logo-RS">
-      <img
-        src="./img/logo-projeto-RS.png"
-        alt="Logo do projeto refugio solidario"
-        width="70"
-        height="70"
-      />
-    </div>
-    <nav cass="nav">
-      <div >
-        <ul>
-          <ol>
-            <a href="index.html"class="nav-rodape">Início</a>
-          </ol>
-          <ol>
-            <a href="blog.html"class="nav-rodape">Blog</a>
-          </ol>
-          <ol>
-            <a href="quemsomos.html"class="nav-rodape">Quem Somos</a>
-          </ol>
-          <ol>
-            <a href="sejavoluntario.html"class="nav-rodape">Voluntário</a>
-          </ol>
-          <ol>
-            <a href="contato.html"class="nav-rodape">Contato</a>
-          </ol>
-          <ol>
-            <a href="politica-de-privacidade.html"class="nav-rodape" target="_blank"
-              >Política de Privacidade</a
-            >
-          </ol>
-        </ul>
-      </div>
-    </nav>
-    <nav class= "nav-icone">
-      <div class="icones">
-        <ul class="ul-incones">
-          <a  href="mailto:refugiosolidariors@hotmail.com" target="_blank"
-            ><img class=" imagemSociais" src="./img/outlook.png" width="30" height="30" />
-          </a>
-           <a 
-            href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL"
-            target="_blank"
-            ><img class=" imagemSociais"
-              src="./img/whatsapp-dark.png"
-              alt="logo-whatsapp"
-              width="30"
-              height="30"
-          /></a>
-          <a  href="facebook.com/refugiosolidario" target="_blank"
-            ><img class=" imagemSociais"
-              src="./img/facebook-dark.png"
-              alt="logo-whatsapp"
-              width="30"
-              height="30"
-          /></a>
-          <a  href="https://www.instagram.com/refugiosolidariors/" target="_blank"
-            ><img class=" imagemSociais"
-              src="./img/instagram.png"
-              alt="logo-whatsapp"
-              width="30"
-              height="30"
-          /></a>
-           <a 
-            href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git"
-            target="blank"
-            ><img class=" imagemSociais"src="./img/github.png" width="30" height="30"
-          /></a>
-        </ul>
-      </div>
-    </nav>
-    <div class="direitos">
-      <strong>© 2024 Feito com ❤ | Todos os direitos reservados.</strong>
-    </div>
-  </footer>
-</section>
+<footer class="footerMissaoVisaoValores">
+  <img id="logoProjetoFooter" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
+  <ul>
+      <a class="links" href="index.html">Início</a>
+      <a class="links" href="blog.html">Blog</a>
+      <a class="links" href="quemsomos.html">Quem Somos</a>
+      <a class="links" href="sejavoluntario.html">Voluntário</a>
+      <a class="links" href="contato.html">Contato</a>
+      <a class="links" href="politica-de-privacidade.html" target="_blank">Política de Privacidade</a>
+  </ul>
 
+  <div>        
+      <a href="mailto:refugiosolidariors@hotmail.com" target="_blank"><img class="redeSociais" src="./img/outlook.png"></a>
+      <a href="https://chat.whatsapp.com/EjysNylrMnWJBfVH6kDqSL" target="_blank"><img class="redeSociais" src="./img/whatsapp-dark.png" alt="logo-whatsapp"></a>
+  <a href="facebook.com/refugiosolidario" target="_blank"><img class="redeSociais" src="./img/facebook-dark.png" alt="logo-whatsapp"></a>
+  <a href="https://www.instagram.com/refugiosolidariors" target="_blank"><img class="redeSociais" src="./img/instagram.png" alt="logo-whatsapp"></a>
+      <a href="https://github.com/Alessandra-CBarbosa/Refugio-Solidario.git" target="blank"><img class="redeSociais" src="./img/github.png"></a>
+  
+  </div>
+  <div  id="copyright">
+    <p>© 2024 Feito com ❤ | Todos os direitos reservados.</p>
+  </div>
+    
+
+ </footer>
+ 
 </body>
 </html>
