--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="htpps://fonts.gstatic.com" />
     <link rel="stylesheet" href="blog.css" />
     <title>Blog</title>
-</head>
+</head
 <body>
   <nav class="navgation">
   
