inserido link da home na logo de todas as páginas

--- a/blog.html
+++ b/blog.html
@@ -23,13 +23,14 @@
   <header class = "header">
    
       <div class="logo">
-    <img
+        <a href="index.html"><img
       src="./img/logo-projeto-RS.png"
       alt="Logo do projeto refugio solidario"
       width="80"
         height="80"
-    />
-  </div>
+      ></a>
+    </div>
+
   <div class="blog">
     <h1>Blogs</h1>
   </div>
