--- a/contato.html
+++ b/contato.html
@@ -23,13 +23,13 @@
   </nav>  
     <header class = "header">
       
-        <div class=" logo">
-      <img
+        <div class="logo">
+        <a href="index.html"><img
         src="./img/logo-projeto-RS.png"
         alt="Logo do projeto refugio solidario"
         width="80"
         height="80"
-      />
+      /></a>
     </div>
     </header>
     <main>
