--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -20,7 +20,7 @@
     <header>
         
         <div class="container-politica">
-        <img class="logo-projeto-RS" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
+            <a href="index.html"><img class="logo-projeto-RS" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario"></a>
         <h1>Política de Privacidade do Refúgio Solidário</h1>
         </div>
        </header>
