--- a/sejavoluntario.html
+++ b/sejavoluntario.html
@@ -20,13 +20,13 @@
 </nav>  
       <header class = "header">
         
-          <div class=" logo">
-        <img
+          <div class="logo">
+          <a href="index.html"><img
           src="./img/logo-projeto-RS.png"
           alt="Logo do projeto refugio solidario"
           width="80"
           height="80"
-        />
+        /></a>
       </div>
       <div class="texto-voluntariado">
        <h1>VOLUNTARIADO</h1>
