--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="container">
         <div>
-            <img class="logo-projeto-RS" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
+            <a href="index.html"><img class="logo-projeto-RS" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario"></a>
         
         <div class="text-container">
          <h1>Bem-vindo (a)</h1>
