--- a/quemsomos.html
+++ b/quemsomos.html
@@ -20,7 +20,7 @@
     </nav>  
    <header>
     <div class="container">
-        <img class="logo-projeto-RS" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario">
+      <a href="index.html"><img class="logo-projeto-RS" src="./img/logo-projeto-RS.png" alt="Logo do projeto refugio solidario"></a>
     <div class="text-container">
         <h1>Quem Somos</h1>
     </div>
